<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>ch.ovata.cr</groupId>
        <artifactId>ovata-cr-parent</artifactId>
        <version>${revision}</version>
    </parent>

    <artifactId>ovata-cr-test</artifactId>
    <packaging>jar</packaging>
    
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>2.2.28</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.30</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.ovata.cr</groupId>
            <artifactId>ovata-cr-impl</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.ovata.cr</groupId>
            <artifactId>ovata-cr-utils</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.ovata.cr</groupId>
            <artifactId>ovata-cr-mysql</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.ovata.cr</groupId>
            <artifactId>ovata-cr-postgresql</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.ovata.cr</groupId>
            <artifactId>ovata-cr-h2</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.ovata.cr</groupId>
            <artifactId>ovata-cr-mongodb</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.ovata.cr</groupId>
            <artifactId>ovata-cr-aws</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.ovata.cr</groupId>
            <artifactId>ovata-cr-fs</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.ovata.cr</groupId>
            <artifactId>ovata-cr-elastic</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.ovata.cr</groupId>
            <artifactId>ovata-cr-hz</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-dbcp2</artifactId>
            <version>2.9.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.26</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.2.24</version>
            <scope>test</scope>
        </dependency>        
        <dependency>
            <groupId>org.patterntesting</groupId>
            <artifactId>patterntesting-rt</artifactId>
            <version>1.8.0</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>commons-io</groupId>
                    <artifactId>commons-io</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>2.0.206</version>
            <scope>test</scope>
        </dependency>        
    </dependencies>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED
                        --add-opens=java.base/java.math=ALL-UNNAMED
                        --add-opens=java.base/java.util=ALL-UNNAMED
                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
                        --add-opens=java.base/java.net=ALL-UNNAMED
                        --add-opens=java.base/java.text=ALL-UNNAMED
                        --add-opens=java.sql/java.sql=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
